update readme, adjust test

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
             <version>${langchain4j.version}</version>
         </dependency>
 
+        <!-- Testing -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
